--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:windowSoftInputMode="adjustResize"
+            android:name=".feats.login.LoginActivity" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
