feat(android): replace kodein with koin

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="epos_next.app.android">
 
     <application
-        android:name=".ThisApplication"
+        android:name=".App"
         android:allowBackup="false"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
