--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -6,10 +6,7 @@
         android:name=".App"
         android:allowBackup="false"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:windowSoftInputMode="adjustResize"
-            android:name=".feats.login.LoginActivity" />
+        android:theme="@style/Theme.EposNext.SplashScreenTheme">
         <activity
             android:name=".MainActivity"
             android:exported="true">
