--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ kotlin = "1.5.31"
 compose = "1.1.0-rc01"
 ktor = "1.6.7"
 koin = "3.1.4"
+nav = "2.3.5"
 
 [libraries]
 
@@ -43,3 +44,8 @@ compose-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "co
 viewpager = { module = "androidx.viewpager2:viewpager2", version = "1.0.0" }
 
 splashscreen = { module = "androidx.core:core-splashscreen", version = "1.0.0-alpha02" }
+
+nav-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "nav" }
+
+nav-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "nav" }
+
