--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,12 +13,14 @@ nav = "2.3.5"
 lifecycle = "2.4.0"
 mockk = "1.9.1"
 sqlDelight = "1.5.3"
+settings = "0.8.1"
 
 [libraries]
 
 napier = { module = "io.github.aakira:napier", version = "2.2.0" }
 
-multiplatformSettings = { module = "com.russhwolf:multiplatform-settings-no-arg", version = "0.8.1" }
+multiplatformSettings-core = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "settings" }
+multiplatformSettings-serialization = { module = "com.russhwolf:multiplatform-settings-serialization", version.ref = "settings" }
 
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version = "0.3.1" }
 
