feat(android): create app icon

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
     <application
         android:name=".App"
         android:allowBackup="false"
+        android:label="Эпос"
         android:supportsRtl="true"
+        android:icon="@mipmap/ic_launcher"
         android:theme="@style/Theme.EposNext.SplashScreenTheme">
         <activity
             android:name=".MainActivity"
