--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.enableCInteropCommonization=true
 
+xcodeproj=iosApp/iosApp.xcodeproj
