fix(shared): job canceled after login

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -78,4 +78,5 @@ sqlDelight-runtime = { module = "com.squareup.sqldelight:runtime", version.ref =
 
 accompanist-navAnimation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
 accompanist-flowLayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanist" }
+accompanist-systemUi = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
 
