--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:label="Эпос"
         android:supportsRtl="true"
         android:icon="@mipmap/ic_launcher"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.EposNext.SplashScreenTheme">
         <activity
             android:name=".MainActivity"
