--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
 
+<!--    android:networkSecurityConfig="@xml/network_security_config"-->
+
     <application
         android:name=".App"
         android:label="Эпос"
         android:supportsRtl="true"
         android:icon="@mipmap/ic_launcher"
-        android:networkSecurityConfig="@xml/network_security_config"
+
         android:theme="@style/Theme.EposNext.SplashScreenTheme">
         <activity
             android:name=".MainActivity"
