fix(ios): new logger

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@ kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.enableCInteropCommonization=true
 
 xcodeproj=iosApp/iosApp.xcodeproj
+
+kotlin.native.cacheKind.iosArm64=none
